objects/Students__c.object
<CustomObject>
    <label>Students</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Collage__c</fullName>
        <label>Collage</label>
        <referenceTo>Collage__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day_of_DOB__c</fullName>
        <formula>TEXT(DAY(Student_DOB__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mon_of_DOB__c</fullName>
        <formula>TEXT(MONTH(Student_DOB__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mon of DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_DOB__c</fullName>
        <label>Student DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Email_Id__c</fullName>
        <label>Parent Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additational_course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additational course</label>
        <referenceTo>Additational_course__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_Hostel_Accomodation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Hostel Accomodation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>